[package]
name = "game_env"
version = "0.1.0"
authors = ["Pyrerune <pyrerune@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.3.2"
rustbreak = {version = "2.0.0-rc3", features = ["bin_enc"]}
serde = {version = "1.0.104", features = ["derive"]}
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
ron = "0.5.1"